Added CSS stylesheet

--- a/recipes/cereal.html
+++ b/recipes/cereal.html
@@ -4,28 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
     <title>Cereal</title>
 </head>
     <body>
-        <h1>Cereal Recipe</h1>
-        <img src="../img/cereal.jpeg" alt="A bowl of Cereal">
-        <h2>Description</h2>
+        <div class="box">
+        <h1 class="heading">Cereal Recipe</h1>
+        <img class="recipe-img" src="../img/cereal.jpeg" alt="A bowl of Cereal">
+        <h2 class="heading">Description</h2>
         <p>Methodology to instantiate a finely crafted bowl
             of sublime wheat based breakfast.
         </p>
 
-        <h3>Ingredients</h3>
+        <h3 class="heading">Ingredients</h3>
         <ul>
             <li>Milk</li>
             <li>Cereal</li>
             <li>Bowl</li>
         </ul>
-        <h3>Steps</h3>
+        <h3 class="heading">Steps</h3>
         <ol>
             <li>Pour cereal into bowl</li>
             <li>Pour Milk into bowl</li>
             <li>Devour</li>
         </ol>
-
+        </div><!-- End of Box -->
     </body>
 </html>
