--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -4,21 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
     <title>Pizza</title>
 </head>
     <body>
-        <h1>Pizza Recipe</h1>
-        <img src="../img/pizza.jpg" alt="A Pizza">
-        <h2>Description</h2>
+        <div class="box">
+        <h1 class="heading">Pizza Recipe</h1>
+        <img class="recipe-img" src="../img/pizza.jpg" alt="A Pizza">
+        <h2 class="heading">Description</h2>
         <p>Recipe for ordering pizza</p>
 
-        <h3>Ingredients</h3>
+        <h3 class="heading">Ingredients</h3>
         <ul>
             <li>Phone</li>
             <li>Money</li>
         </ul>
 
-        <h3>Steps</h3>
+        <h3 class="heading">Steps</h3>
         <ol>
             <li>Call a pizza delivery service using the phone</li>
             <li>Describe the pizza you desire</li>
@@ -26,6 +28,6 @@
             <li>Give the money to to delivery driver</li>
             <li>Devour</li>
         </ol>
-
+        </div><!-- End of Box -->
     </body>
 </html>
