--- a/index.html
+++ b/index.html
@@ -3,15 +3,17 @@
     <head>
         <meta charset="UTF-8">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>Odin Recipes</h1>
-        <ul>
-            <li><a href="./recipes/cereal.html">Cereal</a></li>
-            <li><a href="./recipes/pizza.html">Pizza</a></li>
-            <li><a href="./recipes/corn.html">Corn</a></li>
-
-        </ul>
+        <div class="box">
+            <h1 class="heading">Odin Recipes</h1>
+            <ul>
+                <li><a href="./recipes/cereal.html">Cereal</a></li>
+                <li><a href="./recipes/pizza.html">Pizza</a></li>
+                <li><a href="./recipes/corn.html">Corn</a></li>
+            </ul>
+        </div>
         
     </body>
 </html>
