--- a/recipes/corn.html
+++ b/recipes/corn.html
@@ -4,30 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
     <title>Corn</title>
 </head>
     <body>
-        <h1>Corn Recipe</h1>
-        <img src="../img/corn.jpeg" alt="Corn on the cob with butter">
-        <h2>Description</h2>
+        <div class="box">
+        <h1 class="heading">Corn Recipe</h1>
+        <img class="recipe-img" src="../img/corn.jpeg" alt="Corn on the cob with butter">
+        <h2 class="heading">Description</h2>
         <p>Methodology to instantiate a finely crafted bowl
             of sublime wheat based breakfast.
         </p>
 
-        <h3>Ingredients</h3>
+        <h3 class="heading">Ingredients</h3>
         <ul>
             <li>Cooked corn on the cob</li>
             <li>Butter</li>
             <li>Plate</li>
         </ul>
 
-        <h3>Steps</h3>
+        <h3 class="heading">Steps</h3>
         <ol>
             <li>Take the already cooked corn on 
                 the cob and place it on the plater</li>
             <li>Place butter on top of the corn</li>
             <li>Devour</li>
         </ol>
-
+        </div><!-- End of Box -->
     </body>
 </html>
